--- a/src/index.css
+++ b/src/index.css
@@ -37,7 +37,7 @@ ul {
 input {
   display: block;
   color: var(--dark-grey);
-  padding: 8px;
+  padding: 4px;
   background-color: inherit;
   border: 1px solid var(--dark-grey);
   border-radius: 4px;
@@ -85,4 +85,30 @@ img {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+}
+button,
+.btn {
+  display: block;
+
+  border-radius: 4px;
+  border: 1px solid var(--black);
+  padding: 4px;
+
+  font-size: 16px;
+  font-weight: 500;
+  font-family: inherit;
+  cursor: pointer;
+
+  color: var(--black);
+  background-color: transparent;
+  transition: all 250ms ease-in-out;
+  /* box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.487),
+    2px 6px 13px rgba(0, 0, 0, 0.646), 3px 9px 16px rgba(0, 0, 0, 0.855); */
+}
+.btn:hover,
+.btn:focus,
+button:hover,
+button:focus {
+  background-color: var(--accent-blue);
+  color: var(--light-grey);
 }
